--- a/School-Managment-Frontend/src/main/web/src/app/auth/auth.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/auth/auth.component.html
@@ -4,7 +4,7 @@
         [style.height]="form.invalid && form.submitted  ? '500px' : '400px' ">
             <div class="d-flex justify-content-center">
                 <div class="brand_logo_container">
-                    <img src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="brand_logo" alt="Logo">
+                    <img src="assets/images/FCSF-Logo.png" class="brand_logo" alt="Logo">
                 </div>
             </div>
             <div class="d-flex justify-content-center">
