--- a/School-Managment-Frontend/src/main/web/src/app/auth/user/user-details/user-details.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/auth/user/user-details/user-details.component.html
@@ -28,11 +28,11 @@
                 </div>
                 <div class="ui-g-8">
                     <div class="ui-inputgroup">
-                        <input pInputText id="password" #password type="password"
-                            [(ngModel)]="user.password" style="width: 95%;" />
-                        <button type="button" pButton
-                            styleClass="p-button-warn" style="width: 5%;"
-                            (click)="password.type=password.type=='password'?'text':'password'" icon="pi pi-eye"></button>
+                        <input pInputText id="password" #password type="password" [(ngModel)]="user.password"
+                            style="width: 95%;" />
+                        <button type="button" pButton styleClass="p-button-warn" style="width: 5%;"
+                            (click)="password.type=password.type=='password'?'text':'password'"
+                            icon="pi pi-eye"></button>
                     </div>
                 </div>
             </div>
@@ -43,6 +43,26 @@
                 <div class="ui-g-8">
                     <p-multiSelect [options]="roles" [(ngModel)]="user.roles"
                         defaultLabel="{{ 'select-roles' | translate }}"></p-multiSelect>
+                </div>
+            </div>
+            <div class="ui-g-12">
+                <div class="ui-g-4">
+                    <label for="privileges">{{'areas' | translate }}</label>
+                </div>
+                <div class="ui-g-8">
+                    <p-multiSelect [options]="areas" [(ngModel)]="user.areas"
+                        defaultLabel="{{ 'select-areas' | translate }}" [filter]="false">
+                        <ng-template let-areas pTemplate="selectedItems">
+                            <span *ngFor="let area of areas"> {{area | translate}} </span>
+                            <div *ngIf="!areas || areas.length === 0">
+                                {{'select-areas' | translate }}
+                            </div>
+                        </ng-template>
+                       
+                        <ng-template pTemplate="item" let-area>
+                            {{area.value | translate}}
+                        </ng-template>
+                    </p-multiSelect>
                 </div>
             </div>
             <div class="ui-g-12">
