--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/edit-image-show.component.css
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/edit-image-show.component.css
@@ -1,16 +1,15 @@
   .example-list {
-    height: 300px;
+    min-height: 250px;
     max-width: 100%;
     border: solid 1px #ccc;
     display: flex;
     background: white;
-    min-height: 60px;
     border-radius: 4px;
     overflow: auto;
   }
   
   .example-box {
-    padding: 20px 10px;
+    padding: 10px 10px;
     border: solid 1px #ccc;
     display: flex;
     cursor: move;
@@ -42,3 +41,19 @@
     border: dotted 3px #999;
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+  .numberCircle {
+    font: 32px Arial, sans-serif;
+
+    width: 2em;
+    height: 2em;
+    box-sizing: initial;
+
+    background: #fff;
+    border: 0.1em solid #666;
+    color: #666;
+    text-align: center;
+    border-radius: 50%;    
+
+    line-height: 2em;
+    box-sizing: content-box;   
+}
