--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/area/area.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/area/area.component.html
@@ -4,8 +4,8 @@
         <div class="p-col" style="margin:15px">
             <div style="display: flex; justify-content: center; position: relative;">
                 <h3>{{'monitors' | translate }}</h3>
-                <button type="button" pButton icon="pi pi-plus" (click)="displayAllMonitorDialog = true" label="{{ 'show-on-all' | translate }}"
-                    style="position: absolute; right: 15px;"></button>
+                <button type="button" pButton icon="pi pi-plus" (click)="displayAllMonitorDialog = true"
+                    label="{{ 'show-on-all' | translate }}" style="position: absolute; right: 15px;"></button>
             </div>
             <p-table [value]="monitors" selectionMode="single" [(selection)]="selectedMonitor"
                 (onRowSelect)="onMonitorRowSelect($event)">
@@ -45,32 +45,52 @@
             <p-dialog header="{{'monitor-details' | translate }}" [(visible)]="displayDialog" [focusOnShow]="false"
                 showEffect="fade" [modal]="true" [style]="{width: '50vw'}">
                 <div class="ui-g ui-fluid" *ngIf="monitor">
-                    <div class="ui-g-4">
-                        <label for="type">{{'image-show' | translate }}</label>
-                    </div>
-                    <div class="ui-g-8">
-                        <div>
-                            <p-dropdown [options]="monitorImageShowes"
-                                placeholder="Select an Image View" [(ngModel)]="monitor.imageShowUrl" appendTo="body">
-                            </p-dropdown>
-                            <button *ngIf="monitor.imageShow" type="button" pButton (click)="loginAndStartShow()"
-                                label="{{'start-show' | translate }}" style="margin-top: 5px;"></button>
+
+                    <ng-container *ngIf="hasPrivilege(['LOCK_SHOW']) || !monitor.imageShowLocked">
+                        <div class="ui-g-4">
+                            <label for="type">{{'image-show' | translate }}</label>
                         </div>
-                    </div>
+                        <div class="ui-g-8">
+                            <div>
+                                <p-dropdown [options]="monitorImageShowes" placeholder="Select an Image View"
+                                    [(ngModel)]="monitor.imageShowUrl" appendTo="body">
+                                </p-dropdown>
+                            </div>
+                        </div>
+                        <ng-container *ngIf="hasPrivilege(['LOCK_SHOW']) && monitor.imageShow">
+                            <div class="ui-g-4">
+                                <label for="type">{{'lock-image-show' | translate }}</label>
+                            </div>
+                            <div class="ui-g-8">
+                                <p-toggleButton [(ngModel)]="monitor.imageShowLocked" onLabel="{{ 'yes' | translate}}"
+                                    offLabel="{{ 'no' | translate}}"></p-toggleButton>
+                            </div>
+                        </ng-container>
+                        <button *ngIf="monitor.imageShow" type="button" pButton (click)="loginAndStartShow()"
+                            label="{{'start-show' | translate }}" style="margin-top: 5px;"></button>
+                    </ng-container>
+
+                    <ng-container *ngIf="!hasPrivilege(['LOCK_SHOW']) && monitor.imageShowLocked">
+                        <div style="text-align: center; width: 100%;" >
+                            {{'monitor-locked' | translate}}
+                        </div>
+                    </ng-container>
+
                 </div>
             </p-dialog>
-            <p-dialog header="{{'monitor-details' | translate }}" [(visible)]="displayAllMonitorDialog" [focusOnShow]="false"
-                showEffect="fade" [modal]="true" [style]="{width: '50vw'}">
+            <p-dialog header="{{'monitor-details' | translate }}" [(visible)]="displayAllMonitorDialog"
+                [focusOnShow]="false" showEffect="fade" [modal]="true" [style]="{width: '50vw'}">
                 <div class="ui-g ui-fluid">
                     <div class="ui-g-4">
                         <label for="type">{{'image-show' | translate }}</label>
                     </div>
                     <div class="ui-g-8">
                         <div>
-                            <p-dropdown [options]="monitorImageShowes"
-                                placeholder="Select an Image View" #allImageShowUrl appendTo="body">
+                            <p-dropdown [options]="monitorImageShowes" placeholder="Select an Image View"
+                                #allImageShowUrl appendTo="body">
                             </p-dropdown>
-                            <button  type="button" pButton (click)="loginAndStartShowOnAllMonitors(allImageShowUrl.value)"
+                            <button type="button" pButton
+                                (click)="loginAndStartShowOnAllMonitors(allImageShowUrl.value)"
                                 label="{{'start-show' | translate }}" style="margin-top: 5px;"></button>
                         </div>
                     </div>
@@ -80,10 +100,11 @@
         <div class="p-col" style="margin:15px">
             <div style="display: flex; justify-content: center; position: relative;">
                 <h3>{{'image-show' | translate }}</h3>
-                <button type="button" pButton icon="pi pi-plus" (click)="uploadImageShow = true" label="{{ 'add' | translate }}"
-                    style="position: absolute; right: 15px;"></button>
+                <button type="button" pButton icon="pi pi-plus" (click)="uploadImageShow = true"
+                    label="{{ 'add' | translate }}" style="position: absolute; right: 15px;"></button>
             </div>
-            <p-table [value]="imageShows" selectionMode="single" (onRowSelect)="onImageShowSelect($event)" [paginator]="true" [rows]="10">
+            <p-table [value]="imageShows" selectionMode="single" (onRowSelect)="onImageShowSelect($event)"
+                [paginator]="true" [rows]="10">
                 <ng-template pTemplate="header" let-columns>
                     <tr>
                         <th>{{'image-show-name' | translate }}</th>
