--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/edit-image-show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/edit-image-show.component.html
@@ -53,11 +53,17 @@
                     </div>
                 </div>
             </div>
-            <div style="text-align: center; padding:15px;">
+            <div style="display: flex; justify-content: space-evenly; padding:15px;">
+                <div style="display: flex; width: 15%; justify-content: space-evenly; align-content: center;"
+                    *ngIf="monitorUsingShow.length > 0">
+                    <div>{{'update-monitors' | translate}}: </div>
+                    <p-toggleButton [(ngModel)]="updateMonitors" onLabel="{{ 'yes' | translate}}"
+                        offLabel="{{ 'no' | translate}}"></p-toggleButton>
+                </div>
                 <button label="{{ 'save' | translate}}" pButton pRipple type="button" icon="pi pi-check"
-                    style="background: green; width: 50%; " (click)="save()"></button>
+                    style="background: green;  " (click)="save()"></button>
                 <button label="{{ 'delete' | translate}}" pButton pRipple type="button" icon="pi pi-check"
-                    style="background: red; width: 15%; margin-left: 15%;" (click)="delete()" *ngIf="id != 'new'"></button>
+                    style="background: red;  margin-left: 15%;" (click)="delete()" *ngIf="id != 'new'"></button>
             </div>
 
         </div>
