changes for lauch

--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/area/area.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/area/area.component.html
@@ -120,5 +120,5 @@
             </p-table>
         </div>
     </div>
-    <app-upload-image-show [(displayDialog)]="uploadImageShow" [area]="area"></app-upload-image-show>
+    <app-upload-image-show [(displayDialog)]="uploadImageShow" [area]="area" *ngIf="uploadImageShow"></app-upload-image-show>
 </div>
