--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/image-list/image-list.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/image-list/image-list.component.html
@@ -68,5 +68,5 @@
 
 </p-tree>
 <p-confirmDialog [style]="{width: '50vw'}" ></p-confirmDialog>
-<app-upload-document [(displayDialog)]="uploadDocument"></app-upload-document>
-<app-upload-image-show [(displayDialog)]="uploadImageShow"></app-upload-image-show>
+<app-upload-document [(displayDialog)]="uploadDocument" *ngIf="uploadDocument"></app-upload-document>
+<app-upload-image-show [(displayDialog)]="uploadImageShow" *ngIf="uploadImageShow"></app-upload-image-show>
