--- a/School-Managment-Frontend/src/main/web/src/app/auth/auth.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/auth/auth.component.html
@@ -15,10 +15,9 @@
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="pi pi-id-card"></i></span>
                             </div>
-                            <input id="username" type="text" class="form-control" name="username" [attr.placeholder]="'username' | translate" ngModel
-                                required #username />
+                            <input id="username" type="text" name="username" class="form-control"  [attr.placeholder]="'username' | translate" ngModel
+                                required #username="ngModel" />
                         </div>
-
                         <div class="alert alert-danger" role="alert" *ngIf="form.submitted && username.invalid">
                             Username is required!
                         </div>
@@ -29,7 +28,7 @@
                                 <span class="input-group-text"><i class="pi pi-key"></i></span>
                             </div>
                             <input id="password" type="password" class="form-control" name="password" ngModel required minlength="6"
-                                #password [attr.placeholder]="'password' | translate"/>
+                                #password="ngModel" [attr.placeholder]="'password' | translate"/>
                         </div>
                         <div class="alert alert-danger" role="alert" *ngIf="form.submitted && password.invalid">
                             <div *ngIf="password.errors.required">Password is required</div>
@@ -46,14 +45,14 @@
 
                 </form>
             </div>
-            <!-- <div class="form-group">
+            <div class="form-group">
                 <div class="alert alert-danger" role="alert" *ngIf="form.submitted && isLoginFailed">
                     Login failed: {{ errorMessage }}
                 </div>
             </div>
             <div class="alert alert-success" *ngIf="isLoggedIn">
                 Logged in as {{ roles }}.
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
