--- a/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/upload-image-show/upload-image-show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/photo-show/edit-image-show/upload-image-show/upload-image-show.component.html
@@ -1,6 +1,6 @@
 <p-dialog header="{{ 'upload-image-show' | translate }}" [(visible)]="displayDialog" showEffect="fade" [modal]="true"
     [style]="{width: '50vw'}">
-    <div class="p-grid ui-fluid" *ngIf="imageShow">
+    <div class="p-grid ui-fluid" *ngIf="imageShow && !uploading">
         <div class="p-col-4">
             <label for="name">{{'image-show-name' | translate }}</label>
         </div>
@@ -35,6 +35,10 @@
             *ngIf="errorMessage">
             <div>{{ errorMessage | translate }}</div>
         </div>
+    </div>
+    <div *ngIf="uploading"
+        style="height:120px;width: 120;text-align-last: center; display: flex;justify-content: center;">
+        <mat-progress-spinner mode="indeterminate" [color]="'warn'"></mat-progress-spinner>
     </div>
     <p-footer>
         <div class="ui-dialog-buttonpane ui-helper-clearfix">
